Strain Lineage (#682): toolbar z-indexes fix

--- a/client/client/app/components/ngbStrainLineage/ngbCytoscape/ngbCytoscapeToolbarPanel/ngbCytoscapeToolbarPanel.scss
+++ b/client/client/app/components/ngbStrainLineage/ngbCytoscape/ngbCytoscapeToolbarPanel/ngbCytoscapeToolbarPanel.scss
@@ -9,7 +9,7 @@ ngb-cytoscape-toolbar-panel {
   right: 28px;
   margin-top: -36px;
   top: 40%;
-  z-index: 999;
+  z-index: 99;
   opacity: .25;
 
   &:hover,
